# pdif

./: .gitignore  CMakeLists.txt  NOTICE.md  NOTICE.txt  README.md  TODO.md
.github/workflows/: ci.yml
.github/workspace/: ci.yml
cli/: CMakeLists.txt
cli/include/: CMakeLists.txt
cli/include/pdif_cli/: CMakeLists.txt  pdif_cli_config.hpp.in
cli/src/: CMakeLists.txt  main.cpp
cli/test/: CMakeLists.txt
engine/: CMakeLists.txt
engine/docs/: CMakeLists.txt  Doxyfile.in
engine/include/: CMakeLists.txt
engine/include/pdif/: CMakeLists.txt  agl_map.hpp  content_extractor.hpp  diff.hpp  differ.hpp  edit_op.hpp  errors.hpp  lcs_stream_differ.hpp  logger.hpp  meta_edit_op.hpp  pdf.hpp  pdf_content_stream_filter.hpp  pdif_engine_config.hpp.in  stream.hpp  stream_differ_base.hpp  stream_elem.hpp  stream_meta.hpp
engine/res/: agl_latex_extention.txt
engine/src/: CMakeLists.txt  agl_map.cpp  content_extractor.cpp  diff.cpp  edit_op.cpp  lcs_stream_differ.cpp  logger.cpp  meta_edit_op.cpp  pdf.cpp  pdf_content_stream_filter.cpp  stream.cpp  stream_differ_base.cpp  stream_elem.cpp  stream_meta.cpp  test.cpp
engine/test/: CMakeLists.txt  test_agl_map.cpp  test_content_extractor.cpp  test_diff.cpp  test_edit_op.cpp  test_lcs_stream_differ.cpp  test_meta_edit_op.cpp  test_pdf.cpp  test_stream.cpp  test_stream_differ_base.cpp  test_stream_elem.cpp  test_stream_meta.cpp
